# Mandarin_Lyric_Mind

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  build_faiss_index.py  config.py  embedding_generator.py  eval_report.csv  get_lyrics_from_NetEaseMusic.py  k8s-deployment.yaml  main.py  pyproject.toml  rag_chat.py  requirements.txt  singer_filter.py  test_NetEaseMusic.py
chroma_data/: chroma.sqlite3
data/: indie_artists.txt
data/HUSH/: 天文特征.md  娱乐自己.md  寄居蟹与蜗牛.md  对等关系.md  成人.md  换句话说.md  永恒.md  求生之年.md  波希米亚.md  流明.md  第三人称.md  衣柜歌手.md  身体会说话.md  都会爱情三角习题.md  都是你害的.md
data/Hello Nico/: 你是被抹去的那一段风景.md  光尘.md  别等我回来.md  哭泣的橄榄树.md  布兰琪.md  接下来如何.md  用灵魂交换肌肤之上.md  花.md  荒芜.md  规格化的城市、商品、人.md  辫子.md  陌生的房间陌生的下午.md
data/MC HotDog热狗/: Like Father Like Daughter.md  MC来了.md  NFT.md  九局下半.md  他们根本不是Rapper.md  依然我行我素.md  再见Hip Hop.md  十局上半.md  哈狗帮.md  嘻哈没有派对.md  国王的新歌.md  失眠是一种病.md  她的眼光.md  差不多先生.md  怨偶.md  我爱台妹.md  我的第一首歌.md  我行我素.md  改变.md  最后一支舞.md  楼上的房东.md  约翰屈伏塔.md  脏艺术家.md  贫民百万歌星.md  轻熟女27.md  追梦绿.md  除了说唱我什么都不会.md
data/Tizzy Bac/: Human Error.md  You'll See.md  不愿具名的访客.md  从地心窜出.md  保险推销员之死.md  勿忘我.md  吹动生命的风.md  周日午后的妇女时间.md  太阳快跑.md  失速人生.md  如果看见地狱，我就不怕魔鬼.md  季后赛.md  平凡人的生活.md  我不小心.md  我们.md  我又再度依恋上昨天.md  我所深爱的人们.md  最后告解.md  有人.md  朝我心脏开枪.md  狂恋.md  甚么事都叫我分心.md  田纳西恰恰.md  瞬间白眼一千遍.md  穿越光年的孤独.md  美丽 喔 忧伤.md  说出我的名字.md  过世的丈夫阴魂不散.md  这是因为我们能感到疼痛.md  金翅雀.md  铁之贝克.md  铁之贝克2.0.md  鞋猫夫人，Madame!!!.md  马男之歌.md
data/万能青年旅店/: 不万能的喜剧.md  十万嬉皮.md  在这颗行星所有的酒馆.md  大石碎胸口.md  山雀.md  揪心的玩笑和漫长的白日梦.md  杀死那个石家庄人.md  河北墨麒麟.md  泥河.md  秦皇岛.md  郊眠寺.md  采石.md
data/五月天/: 你不是真正的快乐.md  倔强.md  入阵曲.md  后来的我们.md  后青春期的诗.md  噢买尬.md  夜访吸血鬼.md  如果我们不曾相遇.md  如烟.md  少年他的奇幻漂流.md  干杯.md  成名在望.md  我不愿让你一个人.md  我心中尚未崩坏的地方.md  拥抱.md  温柔.md  生命有一种绝对.md  突然好想你.md  笑忘歌.md  第二人生.md  约翰蓝侬.md  诺亚方舟.md  转眼.md
data/何欣穗/: Famous.md  (+6 more)
debug/: artist_page_9940.html  search_artist.json
graph/: lyric_triplets.csv
index/: index.pkl
src/: __init__.py  generation_integration.py  index_construction.py  rag_basic.py  retrieval_optimization.py
tests/: test_cli.py  test_config.py  test_data_preparation.py  test_generation_integration.py  test_index_construction.py  test_retrieval_optimization.py
(+723 files in other folders)
